--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,17 @@ dependencies:
   dartz: ^0.10.1
   device_info_plus: ^4.0.0
   dio: ^4.0.6
+  dots_indicator: ^2.1.0
   firebase_auth: ^3.6.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
   flutter_cache_manager: ^3.3.0
+  flutter_rating_bar: ^4.0.1
   freezed_annotation: ^2.1.0
   get_it: ^7.2.0
   google_sign_in: ^5.4.0
+  in_app_review: ^2.0.4
   injectable: ^1.5.3
   intl: ^0.17.0
   json_annotation: ^4.6.0
@@ -51,11 +54,12 @@ dependencies:
   lottie: ^1.4.0
   rounded_loading_button: ^2.1.0
   side_sheet: ^1.0.2
+  smooth_page_indicator: ^1.0.0+2
   url_launcher: ^6.1.5
 
 dev_dependencies:
   build_runner: ^2.2.0
-  flutter_launcher_icons: ^0.9.3
+  flutter_launcher_icons: ^0.10.0
   flutter_lints: ^2.0.0
   flutter_native_splash: ^2.2.4
   flutter_test:
