--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,7 +76,9 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-             signingConfig signingConfigs.release
+            shrinkResources false
+            minifyEnabled false
+            signingConfig signingConfigs.release
         }
     }
 
